// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SampleTypePropertiesPanel/> appPropertiesOnly 1`] = `
<div
  className="domain-form-panel domain-panel-no-theme panel panel-default"
>
  <div
    className="domain-panel-header domain-panel-header-expanded domain-panel-header-no-theme panel-heading"
    id="sample-type-properties-hdr"
    onClick={[Function]}
  >
    <span
      className="domain-panel-title"
    >
      Sample Type Properties
    </span>
  </div>
  <div
    className="panel-body"
  >
    <div
      className="margin-bottom row"
    >
      <div
        className="col-xs-12"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-12"
          >
            <a
              className="domain-field-float-right"
              href="https://www.labkey.org/Documentation/wiki-page.view?name=createSampleSet"
              target="_blank"
            >
              Learn more about designing sample types
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="domain-field-section-heading"
    >
      General Properties
    </div>
    <form
      className=""
    >
      <div
        className="margin-bottom margin-top row"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Name
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                data-icon="question-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
             *
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-name"
            onChange={[Function]}
            placeholder="Enter a name for this sample type"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="margin-bottom row"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Description
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                data-icon="question-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
            
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <textarea
            className="form-control textarea-noresize"
            id="entity-description"
            onChange={[Function]}
            value=""
          />
        </div>
      </div>
      <div
        className="margin-bottom row"
      >
        <div
          className="col-xs-2"
        >
          Naming 
          <span
            className="domain-no-wrap"
          >
            Pattern
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                data-icon="question-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
            
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-nameExpression"
            onChange={[Function]}
            placeholder="Enter a naming pattern (e.g., S-\${now:date}-\${dailySampleCount})"
            type="text"
            value=""
          />
        </div>
      </div>
    </form>
    <div
      className="row"
    >
      <div
        className="col-xs-2"
      />
      <div
        className="col-xs-10"
      >
        <span>
          <div
            className="form-group"
          >
            <div>
              <span
                className="container--action-button btn btn-default"
                onClick={[Function]}
              >
                <i
                  className="fa fa-plus-circle container--addition-icon"
                />
                 Add 
                Parent Alias
              </span>
              <span
                className="label-help-target"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                  data-icon="question-circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </span>
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="domain-field-section-heading top-spacing"
    >
      Storage Settings
    </div>
    <div
      className="margin-top row"
    >
      <div
        className="col-xs-2"
      >
        Label 
        <span
          className="domain-no-wrap"
        >
          Color
          <span
            className="label-help-target"
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
              data-icon="question-circle"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </span>
          
        </span>
      </div>
      <div
        className="col-xs-10"
      >
        <div
          className="color-picker"
        >
          <button
            className="color-picker__button btn btn-default"
            onClick={[Function]}
            type="button"
          >
            None
            <i
              className="fa fa-caret-down"
            />
          </button>
          <div
            className="color-picker__picker"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SampleTypePropertiesPanel/> default props 1`] = `
<div
  className="domain-form-panel domain-panel-no-theme panel panel-default"
>
  <div
    className="domain-panel-header domain-panel-header-expanded domain-panel-header-no-theme panel-heading"
    id="sample-type-properties-hdr"
    onClick={[Function]}
  >
    <span
      className="domain-panel-title"
    >
      Sample Type Properties
    </span>
  </div>
  <div
    className="panel-body"
  >
    <div
      className="margin-bottom row"
    >
      <div
        className="col-xs-12"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-12"
          >
            <a
              className="domain-field-float-right"
              href="https://www.labkey.org/Documentation/wiki-page.view?name=createSampleSet"
              target="_blank"
            >
              Learn more about designing sample types
            </a>
          </div>
        </div>
      </div>
    </div>
    <form
      className=""
    >
      <div
        className="margin-bottom margin-top row"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Name
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                data-icon="question-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
             *
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-name"
            onChange={[Function]}
            placeholder="Enter a name for this sample type"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="margin-bottom row"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Description
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                data-icon="question-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
            
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <textarea
            className="form-control textarea-noresize"
            id="entity-description"
            onChange={[Function]}
            value=""
          />
        </div>
      </div>
      <div
        className="margin-bottom row"
      >
        <div
          className="col-xs-2"
        >
          Naming 
          <span
            className="domain-no-wrap"
          >
            Pattern
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                data-icon="question-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
            
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-nameExpression"
            onChange={[Function]}
            placeholder="Enter a naming pattern (e.g., S-\${now:date}-\${dailySampleCount})"
            type="text"
            value=""
          />
        </div>
      </div>
    </form>
    <div
      className="row"
    >
      <div
        className="col-xs-2"
      />
      <div
        className="col-xs-10"
      >
        <span>
          <div
            className="form-group"
          >
            <div>
              <span
                className="container--action-button btn btn-default"
                onClick={[Function]}
              >
                <i
                  className="fa fa-plus-circle container--addition-icon"
                />
                 Add 
                Parent Alias
              </span>
              <span
                className="label-help-target"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                  data-icon="question-circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </span>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SampleTypePropertiesPanel/> include dataclass and use custom labels 1`] = `
<div
  className="domain-form-panel domain-panel-no-theme panel panel-default"
>
  <div
    className="domain-panel-header domain-panel-header-expanded domain-panel-header-no-theme panel-heading"
    id="sample-type-properties-hdr"
    onClick={[Function]}
  >
    <span
      className="domain-panel-title"
    >
      Sample Type Properties
    </span>
  </div>
  <div
    className="panel-body"
  >
    <div
      className="margin-bottom row"
    >
      <div
        className="col-xs-12"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-12"
          >
            <a
              className="domain-field-float-right"
              href="https://www.labkey.org/Documentation/wiki-page.view?name=createSampleSet"
              target="_blank"
            >
              Learn more about designing sample types
            </a>
          </div>
        </div>
      </div>
    </div>
    <form
      className=""
    >
      <div
        className="margin-bottom margin-top row"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Name
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                data-icon="question-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
             *
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-name"
            onChange={[Function]}
            placeholder="Enter a name for this sample type"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="margin-bottom row"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Description
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                data-icon="question-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
            
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <textarea
            className="form-control textarea-noresize"
            id="entity-description"
            onChange={[Function]}
            value=""
          />
        </div>
      </div>
      <div
        className="margin-bottom row"
      >
        <div
          className="col-xs-2"
        >
          Naming 
          <span
            className="domain-no-wrap"
          >
            Pattern
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                data-icon="question-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
            
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-nameExpression"
            onChange={[Function]}
            placeholder="Enter a naming pattern (e.g., S-\${now:date}-\${dailySampleCount})"
            type="text"
            value=""
          />
        </div>
      </div>
    </form>
    <div
      className="row"
    >
      <div
        className="col-xs-2"
      />
      <div
        className="col-xs-10"
      >
        <span>
          <div
            className="form-group"
          >
            <div>
              <span
                className="container--action-button btn btn-default"
                onClick={[Function]}
              >
                <i
                  className="fa fa-plus-circle container--addition-icon"
                />
                 Add 
                Parent Alias
              </span>
              <span
                className="label-help-target"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                  data-icon="question-circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </span>
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-xs-2"
      />
      <div
        className="col-xs-10"
      >
        <span>
          <div
            className="form-group"
          >
            <div>
              <span
                className="container--action-button btn btn-default"
                onClick={[Function]}
              >
                <i
                  className="fa fa-plus-circle container--addition-icon"
                />
                 Add 
                Source Alias
              </span>
              <span
                className="label-help-target"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                  data-icon="question-circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </span>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SampleTypePropertiesPanel/> includeMetricUnitProperty 1`] = `
<div
  className="domain-form-panel domain-panel-no-theme panel panel-default"
>
  <div
    className="domain-panel-header domain-panel-header-expanded domain-panel-header-no-theme panel-heading"
    id="sample-type-properties-hdr"
    onClick={[Function]}
  >
    <span
      className="domain-panel-title"
    >
      Sample Type Properties
    </span>
  </div>
  <div
    className="panel-body"
  >
    <div
      className="margin-bottom row"
    >
      <div
        className="col-xs-12"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-12"
          >
            <a
              className="domain-field-float-right"
              href="https://www.labkey.org/Documentation/wiki-page.view?name=createSampleSet"
              target="_blank"
            >
              Learn more about designing sample types
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="domain-field-section-heading"
    >
      General Properties
    </div>
    <form
      className=""
    >
      <div
        className="margin-bottom margin-top row"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Name
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                data-icon="question-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
             *
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-name"
            onChange={[Function]}
            placeholder="Enter a name for this sample type"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="margin-bottom row"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Description
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                data-icon="question-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
            
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <textarea
            className="form-control textarea-noresize"
            id="entity-description"
            onChange={[Function]}
            value=""
          />
        </div>
      </div>
      <div
        className="margin-bottom row"
      >
        <div
          className="col-xs-2"
        >
          Naming 
          <span
            className="domain-no-wrap"
          >
            Pattern
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                data-icon="question-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
            
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-nameExpression"
            onChange={[Function]}
            placeholder="Enter a naming pattern (e.g., S-\${now:date}-\${dailySampleCount})"
            type="text"
            value=""
          />
        </div>
      </div>
    </form>
    <div
      className="row"
    >
      <div
        className="col-xs-2"
      />
      <div
        className="col-xs-10"
      >
        <span>
          <div
            className="form-group"
          >
            <div>
              <span
                className="container--action-button btn btn-default"
                onClick={[Function]}
              >
                <i
                  className="fa fa-plus-circle container--addition-icon"
                />
                 Add 
                Parent Alias
              </span>
              <span
                className="label-help-target"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                  data-icon="question-circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </span>
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="domain-field-section-heading top-spacing"
    >
      Storage Settings
    </div>
    <div
      className="margin-top row"
    >
      <div
        className="col-xs-2"
      >
        Label 
        <span
          className="domain-no-wrap"
        >
          Color
          <span
            className="label-help-target"
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
              data-icon="question-circle"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </span>
          
        </span>
      </div>
      <div
        className="col-xs-10"
      >
        <div
          className="color-picker"
        >
          <button
            className="color-picker__button btn btn-default"
            onClick={[Function]}
            type="button"
          >
            None
            <i
              className="fa fa-caret-down"
            />
          </button>
          <div
            className="color-picker__picker"
          />
        </div>
      </div>
    </div>
    <div
      className="margin-top row"
    >
      <div
        className="col-xs-2"
      >
        Metric 
        <span
          className="domain-no-wrap"
        >
          Unit
          <span
            className="label-help-target"
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
              data-icon="question-circle"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </span>
          
        </span>
      </div>
      <div
        className="col-xs-3"
      >
        <input
          className="form-control"
          name="metricUnit"
          onChange={[Function]}
          placeholder="Enter a unit"
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<SampleTypePropertiesPanel/> metricUnitOptions 1`] = `
<div
  className="domain-form-panel domain-panel-no-theme panel panel-default"
>
  <div
    className="domain-panel-header domain-panel-header-expanded domain-panel-header-no-theme panel-heading"
    id="sample-type-properties-hdr"
    onClick={[Function]}
  >
    <span
      className="domain-panel-title"
    >
      Sample Type Properties
    </span>
  </div>
  <div
    className="panel-body"
  >
    <div
      className="margin-bottom row"
    >
      <div
        className="col-xs-12"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-12"
          >
            <a
              className="domain-field-float-right"
              href="https://www.labkey.org/Documentation/wiki-page.view?name=createSampleSet"
              target="_blank"
            >
              Learn more about designing sample types
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="domain-field-section-heading"
    >
      General Properties
    </div>
    <form
      className=""
    >
      <div
        className="margin-bottom margin-top row"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Name
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                data-icon="question-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
             *
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-name"
            onChange={[Function]}
            placeholder="Enter a name for this sample type"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="margin-bottom row"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Description
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                data-icon="question-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
            
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <textarea
            className="form-control textarea-noresize"
            id="entity-description"
            onChange={[Function]}
            value=""
          />
        </div>
      </div>
      <div
        className="margin-bottom row"
      >
        <div
          className="col-xs-2"
        >
          Naming 
          <span
            className="domain-no-wrap"
          >
            Pattern
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                data-icon="question-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
            
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-nameExpression"
            onChange={[Function]}
            placeholder="Enter a naming pattern (e.g., S-\${now:date}-\${dailySampleCount})"
            type="text"
            value=""
          />
        </div>
      </div>
    </form>
    <div
      className="row"
    >
      <div
        className="col-xs-2"
      />
      <div
        className="col-xs-10"
      >
        <span>
          <div
            className="form-group"
          >
            <div>
              <span
                className="container--action-button btn btn-default"
                onClick={[Function]}
              >
                <i
                  className="fa fa-plus-circle container--addition-icon"
                />
                 Add 
                Parent Alias
              </span>
              <span
                className="label-help-target"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                  data-icon="question-circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </span>
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="domain-field-section-heading top-spacing"
    >
      Storage Settings
    </div>
    <div
      className="margin-top row"
    >
      <div
        className="col-xs-2"
      >
        Label 
        <span
          className="domain-no-wrap"
        >
          Color
          <span
            className="label-help-target"
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
              data-icon="question-circle"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </span>
          
        </span>
      </div>
      <div
        className="col-xs-10"
      >
        <div
          className="color-picker"
        >
          <button
            className="color-picker__button btn btn-default"
            onClick={[Function]}
            type="button"
          >
            None
            <i
              className="fa fa-caret-down"
            />
          </button>
          <div
            className="color-picker__picker"
          />
        </div>
      </div>
    </div>
    <div
      className="margin-top row"
    >
      <div
        className="col-xs-2"
      >
        Display stored amount 
        <span
          className="domain-no-wrap"
        >
          in
          <span
            className="label-help-target"
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
              data-icon="question-circle"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </span>
           *
        </span>
      </div>
      <div
        className="col-xs-3"
      >
        <div
          className="sampleset-metric-unit-select-container"
        >
          <div
            className="sampleset-metric-unit-select"
          >
            <div
              className=" css-2b097c-container"
              id="selectinput-0"
              onKeyDown={[Function]}
            >
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                className="css-1f43avz-a11yText-A11yText"
              />
              <div
                className="select-input__control css-yk16xz-control"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className="select-input__value-container css-g1d714-ValueContainer"
                >
                  <div
                    className="select-input__placeholder css-1wa3eu0-placeholder"
                  >
                    Select a unit...
                  </div>
                  <div
                    className="css-b8ldur-Input"
                  >
                    <div
                      className="select-input__input"
                      style={
                        Object {
                          "display": "inline-block",
                        }
                      }
                    >
                      <input
                        aria-autocomplete="list"
                        autoCapitalize="none"
                        autoComplete="off"
                        autoCorrect="off"
                        disabled={false}
                        id="react-select-2-input"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        required={true}
                        spellCheck="false"
                        style={
                          Object {
                            "background": 0,
                            "border": 0,
                            "boxSizing": "content-box",
                            "color": "inherit",
                            "fontSize": "inherit",
                            "label": "input",
                            "opacity": 1,
                            "outline": 0,
                            "padding": 0,
                            "width": "1px",
                          }
                        }
                        tabIndex="0"
                        type="text"
                        value=""
                      />
                      <div
                        style={
                          Object {
                            "height": 0,
                            "left": 0,
                            "overflow": "scroll",
                            "position": "absolute",
                            "top": 0,
                            "visibility": "hidden",
                            "whiteSpace": "pre",
                          }
                        }
                      >
                        
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="select-input__indicators css-1hb7zxy-IndicatorsContainer"
                >
                  <span
                    className="select-input__indicator-separator css-1okebmr-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    className="select-input__indicator select-input__dropdown-indicator css-tlfecz-indicatorContainer"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <svg
                      aria-hidden="true"
                      className="css-tj5bde-Svg"
                      focusable="false"
                      height={20}
                      viewBox="0 0 20 20"
                      width={20}
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <input
                name="metricUnit"
                type="hidden"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SampleTypePropertiesPanel/> nameExpressionInfoUrl 1`] = `
<div
  className="domain-form-panel domain-panel-no-theme panel panel-default"
>
  <div
    className="domain-panel-header domain-panel-header-expanded domain-panel-header-no-theme panel-heading"
    id="sample-type-properties-hdr"
    onClick={[Function]}
  >
    <span
      className="domain-panel-title"
    >
      Sample Type Properties
    </span>
  </div>
  <div
    className="panel-body"
  >
    <div
      className="margin-bottom row"
    >
      <div
        className="col-xs-12"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-12"
          >
            <a
              className="domain-field-float-right"
              href="https://www.labkey.org/Documentation/wiki-page.view?name=createSampleSet"
              target="_blank"
            >
              Learn more about designing sample types
            </a>
          </div>
        </div>
      </div>
    </div>
    <form
      className=""
    >
      <div
        className="margin-bottom margin-top row"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Name
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                data-icon="question-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
             *
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-name"
            onChange={[Function]}
            placeholder="Enter a name for this sample type"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="margin-bottom row"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Description
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                data-icon="question-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
            
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <textarea
            className="form-control textarea-noresize"
            id="entity-description"
            onChange={[Function]}
            value=""
          />
        </div>
      </div>
      <div
        className="margin-bottom row"
      >
        <div
          className="col-xs-2"
        >
          Naming 
          <span
            className="domain-no-wrap"
          >
            Pattern
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                data-icon="question-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
            
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-nameExpression"
            onChange={[Function]}
            placeholder="Enter a naming pattern (e.g., S-\${now:date}-\${dailySampleCount})"
            type="text"
            value=""
          />
        </div>
      </div>
    </form>
    <div
      className="row"
    >
      <div
        className="col-xs-2"
      />
      <div
        className="col-xs-10"
      >
        <span>
          <div
            className="form-group"
          >
            <div>
              <span
                className="container--action-button btn btn-default"
                onClick={[Function]}
              >
                <i
                  className="fa fa-plus-circle container--addition-icon"
                />
                 Add 
                Parent Alias
              </span>
              <span
                className="label-help-target"
                onMouseOut={[Function]}
                onMouseOver={[Function]}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                  data-icon="question-circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </span>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;
